<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Enter post text here…</string>
    <string name="error_empty_content">Content can\'t be empty!</string>
    <string name="menu_edit">Edit</string>
    <string name="common_desciption">Common description</string>
    <string name="edit_caption">Edit Post</string>
    <string name="descr_views">Views</string>
    <string name="descr_like">Like</string>
    <string name="descr_share">Share</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="view_video">View video</string>
    <string name="google_play_unavailable">Google play unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_post_added">User %1$s added new post</string>
    <string name="no_posts">No posts</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="attachment_image" >Attachment image</string>
    <string name="error_updating">Error occurred, try again later!</string>
    <string name="bell">Bell</string>
    <string name="new_posts">New posts</string>
    <string name="menu_save">Save</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="not_authorized">Authorization required</string>
    <string name="logout_confirmation">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_username" >User name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="incorrect_password">Password is blank or confirmation doesn\'t match password</string>
    <string name="broadcast_message">Broadcast message</string>
</resources>